[package]
name = "parallel-directory-traverse-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.6"
io-uring = "0.5.11"
nix = "0.26.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
