[package]
name = "libpara-dt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.6"
nix = "0.26.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
