[package]
name = "para-dt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env"] }
libpara-dt = { path = "../libpara-dt" }

[[bin]]
name = "para-dt"
path = "src/para-dt/main.rs"

[[bin]]
name = "pdt-du"
path = "src/du/main.rs"
